--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -30,6 +30,7 @@
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/6/n11706071.md#1">大陆前体操冠军张尚武生活无着 因偷窃入狱</a><br>
 <br><p><a href="https://github.com/mchnr2468/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11753365.md#1">镇政府食堂现熊掌、猫头鹰 领导工作餐？</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752311.md#1">【翻墙必看】内蒙古公安警官开枪打死两官</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752956.md#1">【直播中】12.29“香港人抗争的日与夜”集会</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752699.md#1">北京女医生遇害细节曝光 遭“拉锯式”割颈</a><br>
@@ -41,13 +42,13 @@
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752148.md#1">港警官吐露心声：被迫处于冲突中心 支持调查</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752042.md#1">【珍言真语】薛浩然：不想香港沉没 只能团结</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752142.md#1">上海青浦监狱数名受酷刑外国人揭恐怖内幕</a><br>
-<a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752063.md#1">黄之锋入选金融时报全球50大重要人物</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752769.md#1">北京各行业利润下滑 房价由高位下跌近两成</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752654.md#1">长沙动物园发生大象踩人事故 一驯兽员身亡</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752635.md#1">程晓容：台海两岸关系的走向由谁主导？</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752431.md#1">杭州一合资化工厂仓库着火</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752467.md#1">充电时手机爆炸 浙江男子被烧致面目全非</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752280.md#1">大陆银行理财收益降至3.97% 连跌21个月</a><br>
+<a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752063.md#1">黄之锋入选金融时报全球50大重要人物</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/28/n11751906.md#1">台总统辩论29日14点登场 蔡韩宋直接对决</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/28/n11751793.md#1">美癌症中心高层人事突变 曝光中共何种野心</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/28/n11751864.md#1">内蒙古公安警官枪杀两副局长 当局封口</a><br>
@@ -87,9 +88,8 @@
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/27/n11750093.md#1">小苹果为醒醒唱生日歌 章子怡汪峰赞美妙动听</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/27/n11749953.md#1">首导片《后来的我们》胜诉 刘若英喊理直气壮</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/27/n11749809.md#1">李荣浩叹人的坏没底线 邓紫棋用诗性歌词回应</a><br>
-<a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/27/n11750108.md#1">【新闻看点】台大选前 中共出动航母文攻武吓</a><br>
 <br><p><a href="https://github.com/mchnr2468/djy/blob/master/gb/nsc413_2.md#1">更多......</a></p></td><td VALIGN=TOP rowspan=6 width="156" align="middle"><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"><br>古今奇观-藏字石</a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/6c10-720.jpg" title="从610到720" alt="从610到720"><br>从610到720</a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/1400l.jpg" title="剖析1400例" alt="剖析1400例"><br>剖析1400例</a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/jian-z513.jpg" title="见证513" alt="见证513"><br>见证513</a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/mchnr2468/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/mchnr2468/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/mchnr2468/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/mchnr2468/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/mchnr2468/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/mchnr2468/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/mchnr2468/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/26/n11746872.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/1907181540511973-450x300-150x120.jpg"></a><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/26/n11746872.md#1">控告江泽民  山东壁挂厂长田世洪遭迫害离世</a><br>山东威海市文登壁挂厂厂长田世洪坚持 ...<br><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/27/n11748578.md#1">贵州访民三孩无法入学 当局逼毁上访证据</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/26/n11747628.md#1">滥用“精神病” 大陆排查病患被指侵犯人权</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/26/n11746496.md#1">九位老人一起读法轮功著作 被构陷到检察院</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/26/n11747344.md#1">临沂监狱欲盖弥彰？王全璋健康堪忧</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/26/n11747387.md#1">圣诞佳节：别忘记失去自由的维权人士</a><br><br><p><a href="https://github.com/mchnr2468/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752559.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/05/VCG111170554122-600x400-1-150x120.jpg"></a><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752559.md#1">监守自盗 大陆银行行长给自己贷款跑运输</a><br>安徽一家银行的行长利用职务之便，违 ...<br><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/27/n11750266.md#1">替儿还债？王思聪母亲15家公司被注销</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/27/n11750216.md#1">中国褐皮书：陆企现金流恶化 影子贷款再增</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/27/n11750144.md#1">墨西哥对中国铝箔和压力锅征收关税</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/27/n11749711.md#1">【新闻看点】美中经济两重天 川普：与习签协议</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/27/n11749909.md#1">恐金融风险 中共2年任命12金融副省长??</a><br><br><p><a href="https://github.com/mchnr2468/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/24/n11743793.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2017/07/de728b88a79a29f47092b84533d848c7-150x120.jpg"></a><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/24/n11743793.md#1">【独家】大陆医生亲历不寻常器官移植手术（上）</a><br>“刚将前期准备做好，肝源就来了。一 ...<br><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/27/n11750187.md#1">复旦等校改章程 美大学忧中共控制学术自由</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/27/n11749554.md#1">1月大选投给谁 台湾商界及年轻一代在权衡</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/27/n11750237.md#1">黑龙江厅官大肆敛财 八年送女儿两千万现金</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/27/n11750208.md#1">【新闻大破解】美中角力台湾 2020攸关未来</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/27/n11748096.md#1">【翻墙必看】华为产品价格便宜的内幕</a><br><br><p><a href="https://github.com/mchnr2468/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/25/n11745226.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/3ae3a4cb58f224622c32e15a2a07d2a7-e1508124610232-150x120.jpg"></a><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/25/n11745226.md#1">遭病人家属刺颈 北京一医院女医生伤重身亡</a><br>中国大陆再传严重“医闹”事件。12月 ...<br><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/27/n11748552.md#1">湖北应城4.9级地震 600多户民居现裂缝</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/26/n11746965.md#1">广东小客车与三轮车相撞又撞树起火 7死2伤</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/26/n11746918.md#1">今天日偏食 湖北四川发生地震</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/26/n11746539.md#1">中国多省进入流感流行期 甲型流感为主</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/25/n11744109.md#1">重庆男子坠楼砸中2女中学生 3人均死亡</a><br><br><p><a href="https://github.com/mchnr2468/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/27/n11750227.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/15e2d9060b681c71_ttl7dayhAp_W6-600x400-1-150x120.jpg"></a><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/27/n11750227.md#1">红三代卷入性侵女留学生案？红二代辟谣</a><br>日前，有一名大陆留学生在美国向媒体 ...<br><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/28/n11750711.md#1">每日三退声明精选（2019/12/27）</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/27/n11749534.md#1">国民党挡反渗透法 林飞帆：到底在反对什么？</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/27/n11749624.md#1">香港圣诞催泪弹肆虐 检测报告揭政府谎言</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/27/n11748143.md#1">每日三退声明精选（2019/12/26）</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/26/n11747657.md#1">被质疑耽误周杰伦出专辑 昆凌高EQ回应</a><br><br><p><a href="https://github.com/mchnr2468/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/25/n11745307.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1186649027-1-150x120.jpg"></a><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/25/n11745307.md#1">川普与第一夫人发表圣诞致辞 全文翻译</a><br>12月25日圣诞节，川普（特朗普）总统 ...<br><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/27/n11749205.md#1">广州大学前院长获死刑 曾捅死同校处长夫妇</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/25/n11744548.md#1">2020年天津报纸《城市快报》将休刊</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/24/n11743343.md#1">冯小刚直播卖电影票 兴奋晒折后138元靴子</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/23/n11741030.md#1">大陆课外培训机构倒闭潮 今年1.2万家关停</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/20/n11736026.md#1">大连Logo头奖疑抄迪士尼 网民：胆子真大</a><br><br><p><a href="https://github.com/mchnr2468/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>网闻禁闻</strong></p></h2><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/24/n11742493.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/09/0d200b63bdf261cb1251b781df880bbd-600x400-150x120.jpg"></a><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/24/n11742493.md#1">网文：大陆汽车行业艰难的两大看点</a><br>大陆汽车行业今年深陷泥潭，销量下滑 ...<br><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/24/n11742305.md#1">网文：央行钱印出来了 借钱的人没了</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/6/n11706347.md#1">反送中和六四事件 美政府应对措施对比</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/17/n11728358.md#1">港人给抗议者们写圣诞卡：以后再庆祝</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/16/n11726478.md#1">中共参军许进不许出 一大学生退伍遭重罚</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/12/n11718936.md#1">美联社纪念被中共以间谍罪杀害的中国记者</a><br><br><p><a href="https://github.com/mchnr2468/djy/blob/master/gb/ncid2420.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>群体事件</strong></p></h2><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/26/n11747752.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-458179366-150x120.jpg"></a><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/26/n11747752.md#1">中科大副校长被指与中共军企合作 曾遭美拒签</a><br>今年年初美签被拒的中国量子科学家潘 ...<br><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/26/n11746173.md#1">浙数千学子连续维权三天 抗议学校改名换制</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/24/n11742110.md#1">发表撑港灭共言论 大陆多名公民遭刑拘</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/18/n11731023.md#1">粤村民汽油弹攻政府视频曝光 目击者描述现场</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/17/n11728981.md#1">村民疑政府易地建火葬场 茂名再爆警民冲突</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/15/n11723534.md#1">网传上海市民上街抗议 高呼“打倒腐败”</a><br><br><p><a href="https://github.com/mchnr2468/djy/blob/master/gb/ncid279.md#1">更多......</a></p></td></tr>
+<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/26/n11746872.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/1907181540511973-450x300-150x120.jpg"></a><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/26/n11746872.md#1">控告江泽民  山东壁挂厂长田世洪遭迫害离世</a><br>山东威海市文登壁挂厂厂长田世洪坚持 ...<br><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/27/n11748578.md#1">贵州访民三孩无法入学 当局逼毁上访证据</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/26/n11747628.md#1">滥用“精神病” 大陆排查病患被指侵犯人权</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/26/n11746496.md#1">九位老人一起读法轮功著作 被构陷到检察院</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/26/n11747344.md#1">临沂监狱欲盖弥彰？王全璋健康堪忧</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/26/n11747387.md#1">圣诞佳节：别忘记失去自由的维权人士</a><br><br><p><a href="https://github.com/mchnr2468/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752559.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/05/VCG111170554122-600x400-1-150x120.jpg"></a><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752559.md#1">监守自盗 大陆银行行长给自己贷款跑运输</a><br>安徽一家银行的行长利用职务之便，违 ...<br><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/27/n11750266.md#1">替儿还债？王思聪母亲15家公司被注销</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/27/n11750216.md#1">中国褐皮书：陆企现金流恶化 影子贷款再增</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/27/n11750144.md#1">墨西哥对中国铝箔和压力锅征收关税</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/27/n11749711.md#1">【新闻看点】美中经济两重天 川普：与习签协议</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/27/n11749909.md#1">恐金融风险 中共2年任命12金融副省长??</a><br><br><p><a href="https://github.com/mchnr2468/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/27/n11750108.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/06/1801310135262378-150x120.jpg"></a><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/27/n11750108.md#1">【新闻看点】台大选前 中共出动航母文攻武吓</a><br>距离台湾总统大选还有半个月的时间， ...<br><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/24/n11743793.md#1">【独家】大陆医生亲历不寻常器官移植手术（上）</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/27/n11750187.md#1">复旦等校改章程 美大学忧中共控制学术自由</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/27/n11749554.md#1">1月大选投给谁 台湾商界及年轻一代在权衡</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/27/n11750237.md#1">黑龙江厅官大肆敛财 八年送女儿两千万现金</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/27/n11750208.md#1">【新闻大破解】美中角力台湾 2020攸关未来</a><br><br><p><a href="https://github.com/mchnr2468/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/25/n11745226.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/3ae3a4cb58f224622c32e15a2a07d2a7-e1508124610232-150x120.jpg"></a><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/25/n11745226.md#1">遭病人家属刺颈 北京一医院女医生伤重身亡</a><br>中国大陆再传严重“医闹”事件。12月 ...<br><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/27/n11748552.md#1">湖北应城4.9级地震 600多户民居现裂缝</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/26/n11746965.md#1">广东小客车与三轮车相撞又撞树起火 7死2伤</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/26/n11746918.md#1">今天日偏食 湖北四川发生地震</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/26/n11746539.md#1">中国多省进入流感流行期 甲型流感为主</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/25/n11744109.md#1">重庆男子坠楼砸中2女中学生 3人均死亡</a><br><br><p><a href="https://github.com/mchnr2468/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/27/n11750227.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/15e2d9060b681c71_ttl7dayhAp_W6-600x400-1-150x120.jpg"></a><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/27/n11750227.md#1">红三代卷入性侵女留学生案？红二代辟谣</a><br>日前，有一名大陆留学生在美国向媒体 ...<br><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/28/n11750711.md#1">每日三退声明精选（2019/12/27）</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/27/n11749534.md#1">国民党挡反渗透法 林飞帆：到底在反对什么？</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/27/n11749624.md#1">香港圣诞催泪弹肆虐 检测报告揭政府谎言</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/27/n11748143.md#1">每日三退声明精选（2019/12/26）</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/26/n11747657.md#1">被质疑耽误周杰伦出专辑 昆凌高EQ回应</a><br><br><p><a href="https://github.com/mchnr2468/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/25/n11745307.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1186649027-1-150x120.jpg"></a><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/25/n11745307.md#1">川普与第一夫人发表圣诞致辞 全文翻译</a><br>12月25日圣诞节，川普（特朗普）总统 ...<br><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/27/n11749205.md#1">广州大学前院长获死刑 曾捅死同校处长夫妇</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/25/n11744548.md#1">2020年天津报纸《城市快报》将休刊</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/24/n11743343.md#1">冯小刚直播卖电影票 兴奋晒折后138元靴子</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/23/n11741030.md#1">大陆课外培训机构倒闭潮 今年1.2万家关停</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/20/n11736026.md#1">大连Logo头奖疑抄迪士尼 网民：胆子真大</a><br><br><p><a href="https://github.com/mchnr2468/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>网闻禁闻</strong></p></h2><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/24/n11742493.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/09/0d200b63bdf261cb1251b781df880bbd-600x400-150x120.jpg"></a><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/24/n11742493.md#1">网文：大陆汽车行业艰难的两大看点</a><br>大陆汽车行业今年深陷泥潭，销量下滑 ...<br><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/24/n11742305.md#1">网文：央行钱印出来了 借钱的人没了</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/6/n11706347.md#1">反送中和六四事件 美政府应对措施对比</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/17/n11728358.md#1">港人给抗议者们写圣诞卡：以后再庆祝</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/16/n11726478.md#1">中共参军许进不许出 一大学生退伍遭重罚</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/12/n11718936.md#1">美联社纪念被中共以间谍罪杀害的中国记者</a><br><br><p><a href="https://github.com/mchnr2468/djy/blob/master/gb/ncid2420.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>群体事件</strong></p></h2><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/26/n11747752.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-458179366-150x120.jpg"></a><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/26/n11747752.md#1">中科大副校长被指与中共军企合作 曾遭美拒签</a><br>今年年初美签被拒的中国量子科学家潘 ...<br><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/26/n11746173.md#1">浙数千学子连续维权三天 抗议学校改名换制</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/24/n11742110.md#1">发表撑港灭共言论 大陆多名公民遭刑拘</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/18/n11731023.md#1">粤村民汽油弹攻政府视频曝光 目击者描述现场</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/17/n11728981.md#1">村民疑政府易地建火葬场 茂名再爆警民冲突</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/15/n11723534.md#1">网传上海市民上街抗议 高呼“打倒腐败”</a><br><br><p><a href="https://github.com/mchnr2468/djy/blob/master/gb/ncid279.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/mchnr2468/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
